# ChangeLog for dev-libs/expat
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/expat/ChangeLog,v 1.148 2013/06/05 00:16:25 vapier Exp $

  05 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Add upstream CPE tag (security info) from ChromiumOS.

  09 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> expat-2.1.0-r2.ebuild:
  Remove unnecessary epunt_cxx call wrt #460782 by Roman Žilka

  20 Feb 2013; Zac Medico <zmedico@gentoo.org> expat-2.1.0-r2.ebuild:
  Add ~arm-linux and ~x86-linux keywords.

  07 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> -expat-2.1.0.ebuild:
  old

  06 Oct 2012; Raúl Porcel <armin76@gentoo.org> expat-2.1.0-r2.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #437036

  03 Oct 2012; Jeroen Roovers <jer@gentoo.org> expat-2.1.0-r2.ebuild:
  Stable for HPPA (bug #437036).

  03 Oct 2012; Anthony G. Basile <blueness@gentoo.org> expat-2.1.0-r2.ebuild:
  stable arm, bug #437036

  03 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> expat-2.1.0-r2.ebuild:
  amd64/x86 stable wrt #437036

  03 Oct 2012; Anthony G. Basile <blueness@gentoo.org> expat-2.1.0-r2.ebuild:
  stable ppc ppc64, bug #437036

  28 May 2012; Samuli Suominen <ssuominen@gentoo.org> -expat-2.0.1-r6.ebuild,
  -files/expat-2.0.1-CVE-2009-3560-revised.patch,
  -files/expat-2.0.1-check_stopped_parser.patch,
  -files/expat-2.0.1-fix_bug_1990430.patch, -expat-2.1.0_beta3.ebuild,
  -expat-2.1.0-r1.ebuild:
  old

  28 May 2012; Raúl Porcel <armin76@gentoo.org> expat-2.1.0.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #412089

*expat-2.1.0-r2 (16 May 2012)

  16 May 2012; Tiziano Müller <dev-zero@gentoo.org> +expat-2.1.0-r2.ebuild:
  Drop -fshort-wchar when building wchar_t expat since we're not building for
  WINE-compatibility and need expatw with full wchar_t for amara.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> expat-2.1.0-r1.ebuild:
  keyword ~amd64-fbsd
