@@ -1,12 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX 40-gentoo.rules 365 SHA256 e11d66732dc0d629fdb8c06357db8be5339f2ecf28c2572c5af8637449f549ec SHA512 7554879eaeb12869a78835e4ac814b63c41ddd8715ff9b8d1b75e5b13edf697906371eb10d6c4f0a4c6cb9a44b21a4839985811a3357e18d3b8a842181666e0b WHIRLPOOL 54d962fa515255df5f37bc5c71a3774a909a809809138dba12ed22c6fda78ef336f4e98014f37dbc44289de1ba08f5f2ea31311e14b29a0bbe2cc3d6587d7425
 AUX eudev-fix-selinux.patch 1321 SHA256 28fa9572387c07e69b45f58f14962b850c1d64263c58ce0259d2c1c718dcb119 SHA512 50f50fedf3ced6bac31041d6ffd3a7bafd36721f0005efbb8f41ea70b47f7a642588010ddd0a55bcdfe03a00ac95164e76e1457bb0a0b707d204abe3f66548c4 WHIRLPOOL 777e4ffa9cf4f1f2d13b8328e4787298bf9be624422e8cc2e862da817752b04e35363ed302390c76fdd3ae41e6f44e153d318f0095f67cf7bf85ba03463c1916
 AUX eudev-fix-typo-util.c.patch 889 SHA256 9c9811d8a71939a69ce94e9cff2989326458c7715da4fe0baebfb8f90dab915c SHA512 67ac0fe35dc0c8064c62ab2bcc5db3fe06fb5cff58d4716b5e36a595958fe4c599bb7fe66cf54696eb096ace5f24c97d11f4a179674e0b55d60c32d06f6905d2 WHIRLPOOL c923be2ab69119a5496938efab16f8960d82699aa1ecd6963d56aaa80c755aad3eff668cbf7d7912d87989ef596a52a17ee58a2b84a62c3d890549ca0ed05610
 AUX eudev-hwdb-offset-root.patch 8128 SHA256 c8ae85b2bc69e360b96d9b47fb55b3cec5c44d3ed9cb0ed20f70d05ac2e2d230 SHA512 596cf5f936a1a9ae25ea77ebe2a414271998e2d6931bada6d0548efbdbfde73dba21717157508e5bd89925b868f3bee41492ea149c8ea8a339b3319010798f99 WHIRLPOOL 420c422ce99818f2c321d920fcacf8a37980dc7f540bacc57d87bf426c18dc5d650ef5e70cac3ae3a33cfc4b6632307d97ceb219c9f4518b2ab7a473273881cc
 AUX udev-postmount 1207 SHA256 0220e949b1f31832a205021c0a8615e77b27b73b7c9b16ef4a61bbd2774aeecb SHA512 a69338328fee67617cddab8375d5008bbed41e82c67610cb9df168ffd95bfa016e3b63544b380afa0b98bb1731e4d76960efbdec5c79bb5e844ca10d6c334e2f WHIRLPOOL c1f027a7200a435d163c7ac66a0afc0b004c97ee9c1ecc8406f981b05e6ef95221d0df51d3abc46e494d3a35a07831cbab8d393b3a7d05b5f0aec70e88d894a2
-DIST eudev-1.1-to-1.2beta.patch.gz 31559 SHA256 f5b1a5c8e578c56e0f857435b46d1fc212ec62b71aa13980b9794529bf685505 SHA512 82110b9071fde7be3336e996193b5673d8428cf826c9d4a2278eae5e66c2eaff2ce89016d3aaae84eda06a0dc92fa572b9750a340676708b4f5a0701a3c12482 WHIRLPOOL bcc3b7dc880ce99c40a8f72813f1d011c9a3980648f00699a6837e0516c1e41cf4855df03c3efd530b220933c0e5cc8bb8e1a66bb7eeea7272774e0cd30be34c
 DIST eudev-1.1.tar.gz 1706277 SHA256 462659ef77802f244f55cee58fcd6b2a0cf6c24716f64fbb0c6d88a580f398a8 SHA512 e7b54eaa49e21b350341c39848712458d85cd2d3a69233e11fa7e57e93cb7db2382d1138ebd9eebf971650af85b2aebeff2b71a8396c78c444b6759523e69730 WHIRLPOOL 57782df80ef923f9507e0edf31ead8528c764e0b653f69b9ed4c42925e88d5d26a7953d21083dece84e0bcd5521b6ef81e3ffb97215de934c9b631f8dc5ecb52
+DIST eudev-1.2.tar.gz 1592950 SHA256 b5d1d19e25c2be6229558f399b765cab488a12772ad7eb95bca40ceba0746ba1 SHA512 c0538ff4779759cb7eda83ad976658f0d2bd7090f89475bd39d4c2800c7303062fc9d652f598f9d0dcb3a0893214774e61e399e4d8ed8aad77207cbbe40fead8 WHIRLPOOL 5f55187983ce6bedff1de4e6578f783d5fd90f446f75610c825dc42b781f2598bf95d7b95e2f062281e402cf44b58503263c51023de8656e4b37c9c1bbb1a2f1
 EBUILD eudev-1.1.ebuild 6393 SHA256 8ee517dc78dc456231cb6a6e016a62ffa3a66fb147f088037aed3fb9ce32f75c SHA512 5667e17439c3b01b32dad2c36f1665b048321d446490f418656e4f854f9619610b6515d020fab32abbcf03eb5607ac0735111b8770d0800a2b194c98dfce4a16 WHIRLPOOL 3802065d5e812abbbe1f641cc8a157905ae1d2fc32c02b8baf6f3e2dd632423eff0b99744eaa6e90d2df4792f528bf32bd19c09b8dd1ed04ace52c72ccb4ad40
-EBUILD eudev-1.2_beta.ebuild 6598 SHA256 503c1da6a18d93694d5c679ffe925dd1a9c2f158299e30e25be551d12bf1a170 SHA512 c56654d0ba0f3b7e76c2467dfe4c670ef3aba053e0989653437f7790f1ea7f25e1011571d5993e770f2ae3ca5d1c510395a5f51867b8c795d15e545f7154b47c WHIRLPOOL c2e1092560e913aebb6149c33e98fb1b2f216462bd3c27b6537988a9ab360913b9f8660574078c435819a48350fa37f19208e58f21fdaf4a58157f667b4a08c0
+EBUILD eudev-1.2.ebuild 6364 SHA256 79a28266645f256c203667d2ca2151e29faf7041619be81e72cc8d212804ef7a SHA512 4acbb0022b4f9ce5ada7c1537a2b1eefc536b9e6ac9b9b90f121ce5fb996186730cf6363c8d824478d99854d6059648a41f108f1745ddd45a545e480dd415370 WHIRLPOOL 78b1b1dc0205fc9118b3d7e6f9c6955e4bd65056ed098fee4c1a8beb1d4f1c9ef216649ae142700e746291ff984c432ff056e58f8d4dc583c73d7ffe4f07a35e
 EBUILD eudev-9999.ebuild 6407 SHA256 b359ed058de6d3c3c11bf9a50f14935e229b4d15a4e6dd93b6aaa47ff33bb903 SHA512 a5bf11735be64a0c12c5d6616282fa06090adcb826da834f1262fb2c72b0e1e4ec815dc53082e2f1de10257ceeeec53bf5101458f1e17cf25c53dae40dc2c392 WHIRLPOOL 0e253fe154e454bd51f50fa6c5cd2e2a9c9d27af5b7c2c2fb51135f9da2ce338a9ef8c3f85134d941869c8017980ab7cb50dd3f2e50481977c3e24efa15fd26a
-MISC ChangeLog 8821 SHA256 1c12856d5c08f3057cc4c1ea6762c329d06042dc4c3c0fa635bb625a934df662 SHA512 644a5f1c2e64264d797094ac4de1e8b78a1e6d3f8df7e352f77bf7af9b971badaad3fc00e737ebc73dad6b30ab62f70ad34ffd5c3a6b8162bb07bf8f1bf2a22d WHIRLPOOL d4d7c2386f636d98c95b7c32af08a7745d27c7b6df8662e63fe06554bce35eed8e1724832ecbf1f89b7b182d6b89e67d198f500f24d68e46572c0fd5041042ea
+MISC ChangeLog 8966 SHA256 7ed6a6427de84f1ae646fd8613685fcdb3b6c27204461ce3bfac9df7da7dbebe SHA512 718f8c8f67809d38f4fbf99f8c232202bcbec4bc57ed341b7abf2ce48341e047e6ce45bc0452d81f8dfbc7b7d0397bd0d7fa94a7a84bcedd605310f972a39b26 WHIRLPOOL 60245f3479f29969e5684873a78843aa14d5565c7b9b0497aa47aca995c2555ad741e47c6a75070c5d710d1153f29dab2633874a8fad751333564b6ce2e14b01
 MISC metadata.xml 956 SHA256 2dc374ed7a7236fc2044a93429e8ff9ce68474f5fce8961aff1209914d4bdbcd SHA512 e164394dee8fbd2afb6258fac4899b24607bbde5ec1e1d3cba51059a11768a653e2d841fecad902da0f85cdc579b3e8e2ea64e94d107a448fd1fdcf8362db4d9 WHIRLPOOL c6d492ca4498e509c8e04aead71a89b4481e8294c661968bdc7ca3081bfe116dd486f5676c3dfe08f5c43658a9f37d1fcb815c9378301a8c385852f83ea27544
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iF4EAREIAAYFAlH60q8ACgkQ2ugaI38ACPCv2gEAklOE5R+JXX22kf+XsHEKqiBq
+gJvOYTjli70GD2WiFKUA/AgKO47mIbuVpVo7y5tjMW9lBHnV0vwc61tuFJ3VtCsV
+=+xwg
+-----END PGP SIGNATURE-----
