@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/eudev
 # Copyright 1999- Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.53 2013/07/28 02:45:34 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.54 2013/08/01 21:26:55 axs Exp $
+
+*eudev-1.2 (01 Aug 2013)
+
+  01 Aug 2013; Ian Stakenvicius <axs@gentoo.org> +eudev-1.2.ebuild,
+  -eudev-1.2_beta.ebuild:
+  version bump, remove beta
 
   28 Jul 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
   Removing unneeded useflag description from metadata.xml
